Fix location element alignment

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,16 +25,17 @@ main {
     padding: 3rem;
     box-shadow: 4px 0px 10px lightgray inset;
 
-    div {
+    .location-box {
         padding: 1rem;
         text-align: center;
         font-family: $pFont;
+        height: 70px;
     }
 
     .temp-weather-box {
         display: grid;
         grid-template-rows: 420px 90px;
-        width: 35%;
+        width: 500px;
         margin: 0 auto;
         box-shadow: 3px 3px 10px rgb(145, 159, 173);
         border-radius: 15px;
@@ -46,7 +47,7 @@ main {
             font-family: $pFont;
             font-size: 2.5rem;
         }
-            img {
+            .weather-picture {
                 padding: 1rem;
                 height: 100%;
                 width: 100%;
